<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contributers"
        android:background="#e1e1e1"
        android:padding="4dp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/profile"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/my_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_height="wrap_content"
                android:text="@string/batch"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_weight="1"
                android:layout_height="0dp">


                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/github"
                    android:id="@+id/github"
                    android:onClick="onClick"/>

                <ImageButton
                    android:layout_width="36dp"
                    android:background="@drawable/linkedin"
                    android:layout_height="36dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/linkedin"
                    android:onClick="onClick"/>

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/tweet"
                    android:id="@+id/tweet"
                    android:onClick="onClick"/>

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/facebook"
                    android:id="@+id/facebook"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:onClick="onClick"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="#e1e1e1"/>

    <TextView
        android:layout_width="match_parent"
        android:fontFamily="serif-monospace"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center_horizontal|bottom"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="#512e00"
        android:text="@string/team"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"/>

</LinearLayout>